pixel perfect corrections

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                 </svg>
                 <a class="header__contacts-link" href="tel:+74996861014">+7 (499) 686-10-14</a>
             </div>
-            <button class="header__button button">Получить консультацию</button>
+            <button class="header__nav-button button">Получить консультацию</button>
         </nav>
         <div class="container">
             <div class="header__content">
                 <div class="seporator"></div>
-                <h1 class="header__title">Комплексное обеспечение <br> товарами и расходными <br> материалами бизнеса
+                <h1 class="header__title">Комплексное обеспечение товарами и&nbsp;расходными материалами бизнеса
                 </h1>
                 <p class="header__text">Высокий уровень вовлечения представителей целевой аудитории является четким
                     доказательством простого факта: высококачественный прототип будущего проекта напрямую зависит от
                     анализа существующих паттернов поведения.</p>
-                <a href="./" class="button">Подробнее о компании</a>
+                <a href="./" class="button header__button">Подробнее о компании</a>
             </div>
             <ul class="header__features-list">
                 <li class="header__features-item">
@@ -96,7 +96,7 @@
                     </li>
                     <li class="steps__item">
                         <span class="steps__num">02</span>
-                        <h3 class="steps__title">Заключение договора</h3>
+                        <h3 class="steps__title">Заключение<br>договора</h3>
                         <p class="steps__text">Лишь интерактивные прототипы призваны к ответу.</p>
                     </li>
                     <li class="steps__item">
