--- a/index.html
+++ b/index.html
@@ -89,27 +89,36 @@
                 <ol class="steps__list">
                     <li class="steps__item">
                         <span class="steps__num">01</span>
-                        <h3 class="steps__title">Знакомство</h3>
-                        <p class="steps__text">Безусловно, сплочённость команды профессионалов позволяет оценить
-                            значение форм воздействия.</p>
-                        <a href="./" class="steps__link">Оставить заявку</a>
+                        <div class="steps__content">
+                            <h3 class="steps__title">Знакомство</h3>
+                            <p class="steps__text">Безусловно, сплочённость команды профессионалов позволяет оценить
+                                значение форм воздействия.</p>
+                            <a href="./" class="steps__link">Оставить заявку</a>
+                        </div>
                     </li>
                     <li class="steps__item">
                         <span class="steps__num">02</span>
-                        <h3 class="steps__title">Заключение<br>договора</h3>
-                        <p class="steps__text">Лишь интерактивные прототипы призваны к ответу.</p>
+                        <div class="steps__content">
+                            <h3 class="steps__title">Заключение<br>договора</h3>
+                            <p class="steps__text">Лишь интерактивные прототипы призваны к ответу.</p>
+                        </div>
                     </li>
                     <li class="steps__item">
                         <span class="steps__num">03</span>
-                        <h3 class="steps__title">Произодство</h3>
-                        <p class="steps__text">А также стремящиеся вытеснить традиционное производство, нанотехнологии
-                            функционально разнесены на независимые элементы.</p>
+                        <div class="steps__content">
+                            <h3 class="steps__title">Производство</h3>
+                            <p class="steps__text">А также стремящиеся вытеснить традиционное производство,
+                                нанотехнологии
+                                функционально разнесены на независимые элементы.</p>
+                        </div>
                     </li>
                     <li class="steps__item">
                         <span class="steps__num">04</span>
-                        <h3 class="steps__title">Доставка</h3>
-                        <p class="steps__text">В частности, экономическая повестка сегодняшнего дня говорит о
-                            возможностях приоритизации разума над эмоциями.</p>
+                        <div class="steps__content">
+                            <h3 class="steps__title">Доставка</h3>
+                            <p class="steps__text">В частности, экономическая повестка сегодняшнего дня говорит о
+                                возможностях приоритизации разума над эмоциями.</p>
+                        </div>
                     </li>
                 </ol>
             </div>
