change img path

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="header__navbar">
             <a href="./" class="logo header__logo">
                 <svg class="logo__svg" width="140" height="44">
-                    <use href="/images/sprites.svg#logo-light"></use>
+                    <use href="./images/sprites.svg#logo-light"></use>
                 </svg>
             </a>
             <ul class="header__navigation-list">
@@ -30,7 +30,7 @@
 
             <div class="header__contacts">
                 <svg class="logo__svg" width="24" height="24">
-                    <use href="/images/sprites.svg#phone-icon"></use>
+                    <use href="./images/sprites.svg#phone-icon"></use>
                 </svg>
                 <a class="header__contacts-link" href="tel:+74996861014">+7 (499) 686-10-14</a>
             </div>
@@ -49,31 +49,31 @@
             <ul class="header__features-list">
                 <li class="header__features-item">
                     <svg class="logo__svg" width="36" height="36">
-                        <use href="/images/sprites.svg#1"></use>
+                        <use href="./images/sprites.svg#1"></use>
                     </svg>
                     <p class="header__features-text">Непрерывная работа c 2017 года</p>
                 </li>
                 <li class="header__features-item">
                     <svg class="logo__svg" width="36" height="36">
-                        <use href="/images/sprites.svg#2"></use>
+                        <use href="./images/sprites.svg#2"></use>
                     </svg>
                     <p class="header__features-text">Вся продукция сертифицирована</p>
                 </li>
                 <li class="header__features-item">
                     <svg class="logo__svg" width="36" height="36">
-                        <use href="/images/sprites.svg#3"></use>
+                        <use href="./images/sprites.svg#3"></use>
                     </svg>
                     <p class="header__features-text">Контроль качества на всех этапах</p>
                 </li>
                 <li class="header__features-item">
                     <svg class="logo__svg" width="36" height="36">
-                        <use href="/images/sprites.svg#4"></use>
+                        <use href="./images/sprites.svg#4"></use>
                     </svg>
                     <p class="header__features-text">Возможны поставки по всей России</p>
                 </li>
                 <li class="header__features-item">
                     <svg class="logo__svg" width="36" height="36">
-                        <use href="/images/sprites.svg#5"></use>
+                        <use href="./images/sprites.svg#5"></use>
                     </svg>
                     <p class="header__features-text">Оперативное производство</p>
                 </li>
