add laptop adaptive layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </svg>
             </a>
             <ul class="header__navigation-list">
-                <li class="header__navigation-item"><a href="" class="header__navigation-link">О компании</a></li>
+                <li class="header__navigation-item"><a href="" class="header__navigation-link">О&nbsp;компании</a></li>
                 <li class="header__navigation-item"><a href="" class="header__navigation-link">Контрактное
                         производство</a></li>
                 <li class="header__navigation-item"><a href="" class="header__navigation-link">Собственные торговые
