added mobile menu and mobile adaptive layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,64 @@
 </head>
 
 <body>
+    <div class="mobile__overlay" data-js-header-overlay>
+        <nav class="mobile__menu" aria-label="Мобильное меню">
+            <ul class="mobile__menu-list">
+                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">О компании</a></li>
+                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контрактное производство</a>
+                    <ul class="mobile__submenu-list">
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автомобильная химия</a>
+                        </li>
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Бытовая химия</a>
+                        </li>
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Дезинфицирующие
+                                средства</a>
+                        </li>
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Пищевые аэрозоли</a>
+                        </li>
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Косметическая
+                                продукция</a>
+                        </li>
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Краски аэрозольные</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Собственные марки</a>
+                    <ul class="mobile__submenu-list">
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия AG-Tech</a>
+                        </li>
+                        <li class="mobile__submenu-item"><a href="" class="mobile__submenu-link">Автохимия AP</a>
+                        </li>
+
+                    </ul>
+                </li>
+                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Новости</a></li>
+                <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контакты</a></li>
+            </ul>
+            <hr class="mobile__seporator">
+            <footer class="mobile__menu-footer">
+                <a class="mobile__menu-phone" href="tel:+74996861014">+7 (499) 686-10-14</a>
+                <address class="mobile__menu-address">
+                    <a href="#" class="mobile__menu-address-link"><img src="./images/icon-mobile/navigation-licon.svg"
+                            alt=""><span>г. Москва, Холодильный пер. 4к1с8</span></a>
+                    <a href="mailto:a.dragunov@tdaliance.ru" class="mobile__menu-address-link"><img
+                            src="./images/icon-mobile/mail-icon.svg" alt=""><span>a.dragunov@tdaliance.ru</span></a>
+                </address>
+                <div class="footer__soc1als">
+                    <a href="#"><img src="./images/icon-mobile/vk-icon.svg" alt="ВКонтакте"></a>
+                    <a href="#"><img src="./images/icon-mobile/instagramm-icon.svg" alt="Instagram"></a>
+                </div>
+            </footer>
+        </nav>
+    </div>
     <header class="header header__image">
         <nav class="header__navbar">
+            <button class="header__burger-button burger-button visible-mobile" type="button" aria-label="Open menu"
+                title="Open menu" data-js-header-burger-button>
+                <span class="burger-button__line"></span>
+                <span class="burger-button__line"></span>
+                <span class="burger-button__line"></span>
+            </button>
             <a href="./" class="logo header__logo">
                 <svg class="logo__svg" width="140" height="44">
                     <use href="./images/sprites.svg#logo-light"></use>
@@ -29,12 +85,16 @@
             </ul>
 
             <div class="header__contacts">
-                <svg class="logo__svg" width="24" height="24">
+                <svg class="header__contacts-icon" width="24" height="24">
                     <use href="./images/sprites.svg#phone-icon"></use>
                 </svg>
                 <a class="header__contacts-link" href="tel:+74996861014">+7 (499) 686-10-14</a>
             </div>
-            <button class="header__nav-button button">Получить консультацию</button>
+            <button class="header__nav-button button">
+                <svg class="header__contacts-icon" width="24" height="24">
+                    <use href="./images/sprites.svg#phone-icon"></use>
+                </svg>
+                <span class="header__nav-button-text">Получить консультацию</span></button>
         </nav>
         <div class="container">
             <div class="header__content">
