--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <header class="header header__image">
         <nav class="header__navbar">
-            <button class="header__burger-button burger-button visible-mobile" type="button" aria-label="Open menu"
+            <button class="header__burger-button burger-button" type="button" aria-label="Open menu"
                 title="Open menu" data-js-header-burger-button>
                 <span class="burger-button__line"></span>
                 <span class="burger-button__line"></span>
