--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Новости</a></li>
                 <li class="mobile__menu-item"><a href="" class="mobile__menu-link">Контакты</a></li>
             </ul>
-            <hr class="mobile__seporator">
+            <hr class="mobile__separator">
             <footer class="mobile__menu-footer">
                 <a class="mobile__menu-phone" href="tel:+74996861014">+7 (499) 686-10-14</a>
                 <address class="mobile__menu-address">
@@ -72,9 +72,12 @@
                     <span class="burger-button__line"></span>
                 </span>
             </button>
-            <a href="./" class="logo header__logo">
-                <svg class="logo__svg" width="140" height="44">
+            <a href="./" class="header__logo">
+                <svg class="logo__svg logo__svg--light" width="140" height="44">
                     <use href="./images/sprites.svg#logo-light"></use>
+                </svg>
+                <svg class="logo__svg logo__svg--dark" width="140" height="44">
+                    <use href="./images/sprites.svg#logo-dark"></use>
                 </svg>
             </a>
             <ul class="header__navigation-list">
@@ -101,7 +104,7 @@
         </nav>
         <div class="container">
             <div class="header__content">
-                <div class="seporator"></div>
+                <div class="separator"></div>
                 <h1 class="header__title">Комплексное обеспечение товарами и&nbsp;расходными материалами бизнеса
                 </h1>
                 <p class="header__text">Высокий уровень вовлечения представителей целевой аудитории является четким
@@ -165,7 +168,7 @@
         <section class="section section--light">
             <div class="container">
                 <div class="steps__inner">
-                    <div class="seporator"></div>
+                    <div class="separator"></div>
                     <h2 class="section__title">схема работы</h2>
 
                     <div class="steps__list swiper__steps">
